# curve-regressor

./: .gitmodules  CMakeLists.txt  README.md
include/: abstract_iterative.h  abstract_linear.h  predefined.h  sensor_simulator.h  server_database.h  wrapper_regressor.h
module/: main_classic.cpp  main_start.c  main_symbolic.cpp
service-civetweb/: index.html  script.js  style.css
source/: sensor_simulator.c  server_api.c  server_database.c  wrapper_regressor.cpp
source/classic/: abstract_linear.cpp
source/symbolic/: abstract_iterative.cpp
